[gd_scene load_steps=20 format=3 uid="uid://cnvwsterbfka5"]

[ext_resource type="Script" path="res://entities/animals/animal.gd" id="1_8qqwo"]
[ext_resource type="Script" path="res://entities/animals/deer.gd" id="2_30fl8"]
[ext_resource type="Texture2D" uid="uid://bii244egyc6mf" path="res://assets/sprites/squirreltemp.png" id="3_c8o3q"]
[ext_resource type="Texture2D" uid="uid://dtc26tkknaejj" path="res://assets/sprites/animals/squirrel_eat.png" id="3_dddb4"]
[ext_resource type="Texture2D" uid="uid://bnde6xtuib0pn" path="res://assets/sprites/animals/squirrel_move.png" id="4_23n8k"]
[ext_resource type="AudioStream" uid="uid://cqev3akkdfwhh" path="res://assets/music/sfx/squirrel_1.wav" id="4_w0g43"]
[ext_resource type="AudioStream" uid="uid://b6th7a7ps2e3x" path="res://assets/music/sfx/squirrel_2.wav" id="5_jueig"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gdoti"]
size = Vector2(7.555, 7)

[sub_resource type="AtlasTexture" id="AtlasTexture_ordf7"]
atlas = ExtResource("3_dddb4")
region = Rect2(0, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6re3"]
atlas = ExtResource("3_dddb4")
region = Rect2(8, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4i2a"]
atlas = ExtResource("3_dddb4")
region = Rect2(0, 8, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmq26"]
atlas = ExtResource("4_23n8k")
region = Rect2(0, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_ccq1h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ordf7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6re3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4i2a")
}],
"loop": true,
"name": &"Eat",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmq26")
}],
"loop": true,
"name": &"Move",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c8o3q")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gvj48"]
size = Vector2(3, 7)

[sub_resource type="CircleShape2D" id="CircleShape2D_n0p4s"]
radius = 30.0167

[sub_resource type="Animation" id="Animation_qiltk"]
resource_name = "Eat"
length = 0.3
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Eat"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_n4l8x"]
resource_name = "Move"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody2D/AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterBody2D/AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6bom"]
_data = {
"Eat": SubResource("Animation_qiltk"),
"Move": SubResource("Animation_n4l8x")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_godgh"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 2
stream_0/stream = ExtResource("4_w0g43")
stream_0/weight = 1.0
stream_1/stream = ExtResource("5_jueig")
stream_1/weight = 1.0

[node name="Squirrel" type="Node2D" groups=["Animal"]]
script = ExtResource("1_8qqwo")
favorite_plant_id = 3
eating_range = 0.1
health = 1
attack_speed = 1.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("2_30fl8")
speed = 15.0
attack_speed = 45.0
screen_exit_speed = 15.0
max_distance_from_plant = 2.0
knockback = 4.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_gdoti")
disabled = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CharacterBody2D"]
z_index = 1
sprite_frames = SubResource("SpriteFrames_ccq1h")
animation = &"Move"

[node name="DealDamage" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/DealDamage"]
position = Vector2(-2.5, 0.5)
shape = SubResource("RectangleShape2D_gvj48")

[node name="AttackRange" type="Area2D" parent="CharacterBody2D/AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D/AnimatedSprite2D/AttackRange"]
shape = SubResource("CircleShape2D_n0p4s")

[node name="AttackSpeed" type="Timer" parent="CharacterBody2D"]
wait_time = 0.5
one_shot = true

[node name="RunAway" type="Timer" parent="CharacterBody2D"]
wait_time = 0.5
one_shot = true

[node name="FailedAttackReturnToPlant" type="Timer" parent="CharacterBody2D"]
wait_time = 1.3
one_shot = true

[node name="SelfDestructSequence" type="Timer" parent="CharacterBody2D"]
wait_time = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="CharacterBody2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_p6bom")
}

[node name="RecalculateMoveDir" type="Timer" parent="."]
wait_time = 2.0

[node name="EnterScreen" type="Timer" parent="."]
one_shot = true

[node name="ChooseRandomFavoritePlant" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="DropSeedTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="EatPlant" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Noise" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_godgh")

[node name="SFX_Randomizer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/DealDamage" to="CharacterBody2D" method="_on_deal_damage_body_entered"]
[connection signal="body_entered" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="CharacterBody2D/AnimatedSprite2D/AttackRange" to="." method="_on_attack_range_body_exited"]
[connection signal="timeout" from="CharacterBody2D/AttackSpeed" to="CharacterBody2D" method="_on_attack_speed_timeout"]
[connection signal="timeout" from="CharacterBody2D/RunAway" to="CharacterBody2D" method="_on_run_away_timeout"]
[connection signal="timeout" from="CharacterBody2D/FailedAttackReturnToPlant" to="CharacterBody2D" method="_on_failed_attack_return_to_plant_timeout"]
[connection signal="animation_finished" from="CharacterBody2D/AnimationPlayer" to="CharacterBody2D" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="RecalculateMoveDir" to="CharacterBody2D" method="_on_recalculate_move_dir_timeout"]
[connection signal="timeout" from="ChooseRandomFavoritePlant" to="." method="_on_choose_random_favorite_plant_timeout"]
[connection signal="timeout" from="DropSeedTimer" to="." method="_on_drop_seed_timer_timeout"]
[connection signal="timeout" from="EatPlant" to="." method="_on_eat_plant_timeout"]
[connection signal="timeout" from="SFX_Randomizer" to="." method="_on_sfx_randomizer_timeout"]
